Fixed problem with unit tests not getting fully executed due to process exit on plugin install. Added node environment check when exitting (only in production).

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -29,6 +29,7 @@ services:
         hostname: ui
         restart: always
         environment:
+            NODE_ENV: production
             VIRTUAL_HOST: example.com                              # how is the host reached
             DB_CONNECTION: mongodb://db.example.com/prod           # db connection string
             ENCRYPTION_SECRET: my-super-secret-key                 # change this (JWT)
