--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -57,6 +57,10 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
+
+        location /chronograf {
+            proxy_pass http://chronograf:8888;
+        }
     }
 
     server {
